crates/keron-lang/tests/corpus/errors/check/for_empty_list_inferred.keron
for x in [] {
  reconcile x
}
